--- a/index.html
+++ b/index.html
@@ -160,14 +160,15 @@
                         <p>
                             In the present day, all the coastal regions that are highlighted in red are at risk of being flooded by rising sea levels caused by climate change.
                         </p>
-                        <p>This poses a great risk to not only the land remaining in the delta, but even in other coastal regions.</p>
-                        <div id="pd"></div>
+                        <p>This poses a risk far greater than the eroding delta as this issue exacerbates the flooding issues that the coastal Louisiana currently has, and also takes away land that could be used to live/work on reducing both population and the economy.  </p>
+                        <p>Moreover, as it is accelerating at a much faster pace than the coastal erosion is, both would need to be addressed in order for the long term health of the region.</p>
                     </div>
                 </div>
                 <div id="content-3" class="content-wrapper">
                     <div class="content">
-                        <p class="section">LAST PARAGRAPH TITLE</p>
-                        LAST PARAGRAPH CONTENT HERE
+                        <p class="section">ACCOMPANYING GRAPHS</p>
+                        <img src="https://static.barnden.dev/LACoast-erosion-rate.png" alt="Graph Representing Coastal Land Loss per Coastal Parish">
+                        <p>This graph showcases the rate of change (meters/year) of the coastline's loss for Lousiana coastal parishes. It was created through modelling data from the USGS concerning longterm coastal change of the area.</p> 
                     </div>
                 </div>
             </div>
@@ -182,28 +183,29 @@
             style: 'mapbox://styles/barnden/ckkk1x5gu0qm317mie9b3uj8q',
             center: [0, 0],
             zoom: 7,
-            pitch: 50,
+            pitch: 40,
             interactive: false,
             continuousWorld: false,
             noWrap: true
         })
 
         const parishes = {
-            stcharles: ["St. Charles Parish", 9700, "#FC9F5B"],
-            plaquemines: ["Plaquemines", 50700, "#FBD1A2"],
-            terrebonne: ["Terrebonne", 34400, "#72B01D"],
-            lafourche: ["LaFourche", 37000, "#7DCFB6"],
-            orleans: ["Orleans", 28000, "#33CA7F"],
-            jefferson: ["Jefferson", 34900, "#9C528B"],
-            stbernard: ["Saint Bernard", 40100, "#610F7F"],
-            stmary: ["Saint Mary", 8700, "#21FA90"],
-            vermilion: ["Vermilion", 10300, "#F7B538"],
-            cameron: ["Cameron", 35300, "#98473E"],
-            iberia: ["Iberia", 8100, "#FF1053"]
+            stcharles: ["St. Charles Parish", 9700],
+            plaquemines: ["Plaquemines", 50700],
+            terrebonne: ["Terrebonne", 34400],
+            lafourche: ["LaFourche", 37000],
+            orleans: ["Orleans", 28000],
+            jefferson: ["Jefferson", 34900],
+            stbernard: ["Saint Bernard", 40100],
+            stmary: ["Saint Mary", 8700],
+            vermilion: ["Vermilion", 10300],
+            cameron: ["Cameron", 35300],
+            iberia: ["Iberia", 8100]
         }
 
         map.on('load', function () {
-            window.scrollTo(0, 0)
+            // map.setPaintProperty('lacoast-5erseh', 'fill-color', '#F00')
+            // map.setPaintProperty('lacoast-5erseh', 'fill-opacity', 0.15)
 
             map.addSource('lacoast', {
                 type: 'geojson',
@@ -218,21 +220,12 @@
                     type: 'fill-extrusion',
                     source: 'lacoast',
                     paint: {
-                        'fill-extrusion-color': v[2],
+                        'fill-extrusion-color': "#0F0",
                         'fill-extrusion-height': 0,
                         'fill-extrusion-opacity': 0.
                     },
                     filter: ["==", "name", v[0]]
                 })
-            })
-
-            map.addLayer({
-                id: 'coast',
-                type: 'fill',
-                source: 'lacoast',
-                paint: {
-                    'fill-opacity': 0.
-                }
             })
 
             // This is how you update one of the "paint" properties.
@@ -254,20 +247,6 @@
                 map.jumpTo({ center: [cx, cy], zoom: czoom })
             }
 
-            map.on('mousemove', function(e) {
-                if (window.scrollTop < 3000) return
-                var parish = map.queryRenderedFeatures(e.point, {
-                    layers: ['coast']
-                });
-
-                if (parish.length > 0) {
-                    console.log(parish[0])
-                    document.getElementById('pd').innerHTML = '<h3><strong>' + parish[0].properties.name + '</strong></h3><p><strong><em>' + parish[0].properties.losspercent + '</strong>% of land lost from 1930</em></p>';
-                } else {
-                    document.getElementById('pd').innerHTML = '<p>Hover over a parish for more information.</p>';
-                }
-            })
-
             window.addEventListener('scroll', e => {
                 let y = window.scrollY
 
@@ -283,7 +262,7 @@
                     goto(...false_river, inv)
 
                     if (overlay) {
-                        map.setPaintProperty('coast', 'fill-opacity', 0.0)
+                        map.setPaintProperty('lacoast-5erseh', 'fill-opacity', 0.0)
                         overlay = false
                     }
 
@@ -292,8 +271,8 @@
                     goto(...la, inv)
 
                     if (!overlay) {
-                        map.setPaintProperty('coast', 'fill-color', '#F00')
-                        map.setPaintProperty('coast', 'fill-opacity', 0.15)
+                        map.setPaintProperty('lacoast-5erseh', 'fill-color', '#F00')
+                        map.setPaintProperty('lacoast-5erseh', 'fill-opacity', 0.15)
                         overlay = true
                     }
 
